--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <section id="knowledge" class="content-section hidden">
                 <div class="bg-white p-6 sm:p-8 rounded-xl shadow-md">
                     <h2 class="text-2xl font-bold text-teal-700 mb-2">4. คำแนะนำส่วนบุคคลและแหล่งความรู้เพื่อชาว SPU</h2>
-                    <p class="text-slate-600 mb-6">การป้องกันตนเองเริ่มต้นจากความรู้ที่ถูกต้อง ส่วนนี้นำเสนอแนวคิดคลังความรู้และคำแนะนำที่ปรับให้เข้ากับนักศึกษาและบุคลากรแต่ละคน ผ่านรูปแบบ Accordion ที่ใช้งานง่าย ทำให้ผู้ใช้สามารถเข้าถึงข้อมูลที่เชื่อถือได้เกี่ยวกับวิธีป้องกันและดูแลตนเองจากมลพิษทางอากาศ รวมถึงแหล่งข้อมูลจากมหาวิทยาลัย</p>
+                    <p class="text-slate-600 mb-6">การป้องกันตนเองเริ่มต้นจากความรู้ที่ถูกต้อง ส่วนนี้นำเสนอแนวคิดความรู้และคำแนะนำที่ปรับให้เข้ากับนักศึกษาและบุคลากรแต่ละคน ทำให้ผู้ใช้สามารถเข้าถึงข้อมูลที่เชื่อถือได้เกี่ยวกับวิธีป้องกันและดูแลตนเองจากมลพิษทางอากาศ รวมถึงแหล่งข้อมูลจากมหาวิทยาลัย</p>
                      <div class="w-full max-w-2xl mx-auto">
                          <h3 class="font-semibold text-lg mb-4 text-center">เป้าหมาย: รู้วิธีป้องกันและดูแลตนเองในรั้ว SPU</h3>
                         <div id="accordion-container" class="space-y-2">
