--- a/index.html
+++ b/index.html
@@ -152,11 +152,11 @@
             <section id="gamify" class="content-section hidden">
                  <div class="bg-white p-6 sm:p-8 rounded-xl shadow-md">
                     <h2 class="text-2xl font-bold text-teal-700 mb-2">3. ระบบสะสมแต้มและภารกิจสิ่งแวดล้อม SPU</h2>
-                    <p class="text-slate-600 mb-6">เพื่อสร้างแรงจูงใจและกระตุ้นการมีส่วนร่วมของนักศึกษาและบุคลากรในระยะยาว เรานำเสนอแนวคิด Gamification ผ่านระบบภารกิจและคะแนนสะสม ส่วนนี้จะแสดงตัวอย่างภารกิจที่ผู้ใช้ทำได้ และกราฟแสดงผลการมีส่วนร่วม ซึ่งจะช่วยให้ผู้ใช้รู้สึกสนุกและเห็นคุณค่าของการเปลี่ยนแปลงพฤติกรรมเพื่อสิ่งแวดล้อมภายในรั้วมหาวิทยาลัย</p>
+                    <p class="text-slate-600 mb-6">เพื่อสร้างแรงจูงใจและกระตุ้นการมีส่วนร่วมของนักศึกษาและบุคลากร ผ่านระบบภารกิจและคะแนนสะสม ส่วนนี้จะแสดงตัวอย่างภารกิจที่ผู้ใช้ทำได้ และกราฟแสดงผลการมีส่วนร่วม ซึ่งจะช่วยให้ผู้ใช้รู้สึกสนุกและเห็นคุณค่าของการเปลี่ยนแปลงพฤติกรรมเพื่อสิ่งแวดล้อมภายในรั้วมหาวิทยาลัย</p>
                     <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 items-center">
                         <div>
                              <h3 class="font-semibold text-lg mb-2">เป้าหมาย: สร้างแรงจูงใจและมีส่วนร่วมใน SPU</h3>
-                            <p class="mb-4">ใช้เกมมิฟิเคชันเปลี่ยนเรื่องสิ่งแวดล้อมให้เป็นเรื่องสนุกและท้าทาย ชวนนักศึกษา/บุคลากรทำภารกิจเพื่อสะสมแต้มและของรางวัลพิเศษจากมหาวิทยาลัย</p>
+                            <p class="mb-4">เปลี่ยนเรื่องสิ่งแวดล้อมให้เป็นเรื่องสนุกและท้าทาย ชวนนักศึกษา/บุคลากรทำภารกิจเพื่อสะสมแต้มและของรางวัลพิเศษจากมหาวิทยาลัย</p>
                             <div class="space-y-3">
                                 <div class="p-4 bg-green-100 border-l-4 border-green-500 rounded-r-lg">
                                     <h4 class="font-bold">ภารกิจ: เดินทางสีเขียวใน SPU</h4>
@@ -192,7 +192,7 @@
             <section id="report" class="content-section hidden">
                  <div class="bg-white p-6 sm:p-8 rounded-xl shadow-md">
                     <h2 class="text-2xl font-bold text-teal-700 mb-2">5. ระบบร้องเรียนและส่งต่อข้อมูลภายในมหาวิทยาลัย</h2>
-                    <p class="text-slate-600 mb-6">พลังของเสียงจากนักศึกษาและบุคลากรสามารถสร้างการเปลี่ยนแปลงในระดับนโยบายของมหาวิทยาลัยได้ ส่วนนี้จำลองระบบการร้องเรียนที่ใช้งานง่าย และแสดงข้อมูลสถิติของเรื่องร้องเรียนในรูปแบบกราฟวงกลม เพื่อให้เห็นภาพรวมของปัญหาและเป็นข้อมูลสนับสนุนในการส่งต่อไปยังหน่วยงานที่เกี่ยวข้องภายในมหาวิทยาลัยเพื่อการวิจัยและผลักดันนโยบายต่อไป</p>
+                    <p class="text-slate-600 mb-6">พลังของเสียงจากนักศึกษาและบุคลากรสามารถสร้างการเปลี่ยนแปลงในมหาวิทยาลัยได้ ส่วนนี้จำลองระบบการร้องเรียนที่ใช้งานง่าย และแสดงข้อมูลสถิติของเรื่องร้องเรียนในรูปแบบกราฟวงกลม เพื่อให้เห็นภาพรวมของปัญหาและเป็นข้อมูลสนับสนุนในการส่งต่อไปยังหน่วยงานที่เกี่ยวข้องภายในมหาวิทยาลัย</p>
                     <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 items-center">
                         <div>
                              <h3 class="font-semibold text-lg mb-2">เป้าหมาย: กระตุ้นนโยบายหรือกฎระเบียบภายใน SPU</h3>
@@ -202,9 +202,9 @@
                                     <label class="block text-sm font-medium text-slate-700">ประเภทเรื่องร้องเรียน</label>
                                     <select class="mt-1 block w-full py-2 px-3 border border-slate-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-teal-500 focus:border-teal-500">
                                         <option>ควันจากรถยนต์/มอเตอร์ไซค์ในมหาวิทยาลัย</option>
-                                        <option>ฝุ่นจากการก่อสร้างภายในมหาวิทยาลัย</option>
-                                        <option>กลิ่นไม่พึงประสงค์ในอาคาร</option>
-                                        <option>การเผาขยะ/ใบไม้ในบริเวณใกล้เคียง</option>
+                                        <option>ฝุ่นจากการก่อสร้างรอบๆมหาวิทยาลัย</option>
+                                        <option>กลิ่นไม่พึงประสงค์ในมหาวิทยาลัย เช่น บุหรี่</option>
+                                        <option>กลิ่นไม่พึงประสงค์ในอาคาร เช่น กลิ่นห้องน้ำ กลิ่นอับให้ห้องเรียน</option>
                                     </select>
                                 </div>
                                 <div>
