--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                                         <option>ควันจากรถยนต์/มอเตอร์ไซค์ในมหาวิทยาลัย</option>
                                         <option>ฝุ่นจากการก่อสร้างรอบๆมหาวิทยาลัย</option>
                                         <option>กลิ่นไม่พึงประสงค์ในมหาวิทยาลัย เช่น บุหรี่</option>
-                                        <option>กลิ่นไม่พึงประสงค์ในอาคาร เช่น กลิ่นห้องน้ำ กลิ่นอับให้ห้องเรียน</option>
+                                        <option>กลิ่นไม่พึงประสงค์ในอาคาร เช่น กลิ่นห้องน้ำ กลิ่นอับในห้องเรียน</option>
                                     </select>
                                 </div>
                                 <div>
@@ -381,7 +381,7 @@
                 const knowledgeItems = [
                     { title: 'วิธีเลือกหน้ากากอนามัยที่ถูกต้องสำหรับใช้ในมหาวิทยาลัย', content: 'ควรเลือกหน้ากากที่ระบุว่าสามารถป้องกันฝุ่น PM2.5 ได้ เช่น N95 โดยต้องสวมให้กระชับกับใบหน้า ไม่มีช่องว่างให้อากาศรั่วไหลเข้ามาได้ โดยเฉพาะเมื่ออยู่ในพื้นที่ที่มีการจราจรหนาแน่นภายในมหาวิทยาลัย' },
                     { title: 'ผลกระทบของ PM2.5 ต่อสุขภาพนักศึกษาและบุคลากร', content: 'ฝุ่น PM2.5 สามารถเข้าสู่กระแสเลือดและส่งผลกระทบต่ออวัยวะต่างๆ ทั่วร่างกาย เพิ่มความเสี่ยงต่อโรคทางเดินหายใจ โรคหัวใจและหลอดเลือด รวมถึงมะเร็งปอด การรับรู้ถึงความเสี่ยงนี้สำคัญต่อการดูแลสุขภาพในระยะยาว' },
-                    { title: 'การดูแลตนเองในวันที่อากาศแย่ภายใน SPU', content: 'หลีกเลี่ยงการทำกิจกรรมกลางแจ้งในมหาวิทยาลัย ปิดประตูหน้าต่างห้องเรียน/สำนักงานให้สนิท หากจำเป็นต้องออกไปข้างนอก ควรใส่หน้ากากป้องกันฝุ่น และรีบทำความสะอาดร่างกายเมื่อกลับถึงที่พัก' }
+                    { title: 'การดูแลตนเองในวันที่อากาศแย่ภายใน SPU', content: 'หลีกเลี่ยงการทำกิจกรรมกลางแจ้งในมหาวิทยาลัย ปิดประตูหน้าต่างห้องเรียน หากจำเป็นต้องออกไปข้างนอก ควรใส่หน้ากากป้องกันฝุ่น' }
                 ];
                 knowledgeItems.forEach(item => {
                     const itemDiv = document.createElement('div');
